{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 41,
  "lineage": "764096ee-e08d-1da1-5f32-62f01ebcfa38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef3ae1f3c6f89131",
            "arn": "arn:aws:ec2:us-east-1:092988563851:elastic-ip/eipalloc-0ef3ae1f3c6f89131",
            "association_id": "eipassoc-008cdbe45f91c45db",
            "domain": "vpc",
            "id": "eipalloc-0ef3ae1f3c6f89131",
            "network_border_group": "us-east-1",
            "network_interface": "eni-029ec530a07771c5b",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-52-7-123-167.compute-1.amazonaws.com",
            "public_ip": "52.7.123.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-nat-eip"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:internet-gateway/igw-07a77c4dd8a8b13e1",
            "id": "igw-07a77c4dd8a8b13e1",
            "owner_id": "092988563851",
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-igw"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-igw"
            },
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092988563851:loadbalancer/app/yam-alb/a5cef44c97db2984",
            "arn_suffix": "app/yam-alb/a5cef44c97db2984",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "yam-alb-117983497.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:092988563851:loadbalancer/app/yam-alb/a5cef44c97db2984",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yam-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d7ddce6a556febcb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04cdc66e1c5f687e5"
              },
              {
                "subnet_id": "subnet-0a3270634e390f520"
              }
            ],
            "subnets": [
              "subnet-04cdc66e1c5f687e5",
              "subnet-0a3270634e390f520"
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-alb"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-alb"
            },
            "vpc_id": "vpc-0ea7f0e7e6d0668dc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092988563851:listener/app/yam-alb/a5cef44c97db2984/c8f0abeb15a9d1e1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "OK",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:092988563851:listener/app/yam-alb/a5cef44c97db2984/c8f0abeb15a9d1e1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:092988563851:loadbalancer/app/yam-alb/a5cef44c97db2984",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:092988563851:targetgroup/yam-app-tg/f55fe0752e21a8c8",
            "arn_suffix": "targetgroup/yam-app-tg/f55fe0752e21a8c8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:092988563851:targetgroup/yam-app-tg/f55fe0752e21a8c8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "yam-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-app-tg"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef3ae1f3c6f89131",
            "association_id": "eipassoc-008cdbe45f91c45db",
            "connectivity_type": "public",
            "id": "nat-08ddaf79544d6896a",
            "network_interface_id": "eni-029ec530a07771c5b",
            "private_ip": "10.0.1.47",
            "public_ip": "52.7.123.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04cdc66e1c5f687e5",
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-nat-gw"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:route-table/rtb-05afdd941436fbb9d",
            "id": "rtb-05afdd941436fbb9d",
            "owner_id": "092988563851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ddaf79544d6896a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-private-rt"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:route-table/rtb-0c8679d0c264d611a",
            "id": "rtb-0c8679d0c264d611a",
            "owner_id": "092988563851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a77c4dd8a8b13e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-public-rt"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae2c4d5b4cc732b3",
            "route_table_id": "rtb-05afdd941436fbb9d",
            "subnet_id": "subnet-0eee706c4fc9236c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef48ac4e163cf140",
            "route_table_id": "rtb-05afdd941436fbb9d",
            "subnet_id": "subnet-003a53bba22ce4d65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d4dfd21ecb44965",
            "route_table_id": "rtb-0c8679d0c264d611a",
            "subnet_id": "subnet-04cdc66e1c5f687e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de8f6a0a91eb8bd9",
            "route_table_id": "rtb-0c8679d0c264d611a",
            "subnet_id": "subnet-0a3270634e390f520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:security-group/sg-0d7ddce6a556febcb",
            "description": "Allow inbound HTTP/HTTPS to the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7ddce6a556febcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "yam-alb-sg",
            "name_prefix": "",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-alb-sg"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:security-group/sg-0a08440d100d56406",
            "description": "EKS cluster control plane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a08440d100d56406",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Worker nodes to control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ac90fbdeab5004e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "yam-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:security-group/sg-00ac90fbdeab5004e",
            "description": "EKS worker node security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ac90fbdeab5004e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB traffic to nodes",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d7ddce6a556febcb"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "Node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "yam-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-eks-nodes-sg"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-eks-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:security-group/sg-022efeed63b43c702",
            "description": "Allow PostgreSQL access from EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022efeed63b43c702",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from within VPC (kubectl pods, admin access)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ac90fbdeab5004e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "yam-rds-sg",
            "name_prefix": "",
            "owner_id": "092988563851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-rds-sg"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:subnet/subnet-0eee706c4fc9236c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eee706c4fc9236c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-private-subnet-1",
              "kubernetes.io/cluster/yam-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-private-subnet-1",
              "kubernetes.io/cluster/yam-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:subnet/subnet-003a53bba22ce4d65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003a53bba22ce4d65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-private-subnet-2",
              "kubernetes.io/cluster/yam-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-private-subnet-2",
              "kubernetes.io/cluster/yam-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:subnet/subnet-04cdc66e1c5f687e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cdc66e1c5f687e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-public-subnet-1",
              "kubernetes.io/cluster/yam-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-public-subnet-1",
              "kubernetes.io/cluster/yam-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:subnet/subnet-0a3270634e390f520",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3270634e390f520",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "092988563851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-public-subnet-2",
              "kubernetes.io/cluster/yam-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-public-subnet-2",
              "kubernetes.io/cluster/yam-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ea7f0e7e6d0668dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092988563851:vpc/vpc-0ea7f0e7e6d0668dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1136fb612491291",
            "default_route_table_id": "rtb-0017f8e8331c2d49c",
            "default_security_group_id": "sg-09726756435e5eeb6",
            "dhcp_options_id": "dopt-082674a8e4d7b9a2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea7f0e7e6d0668dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0017f8e8331c2d49c",
            "owner_id": "092988563851",
            "tags": {
              "Environment": "sandbox",
              "Name": "yam-vpc"
            },
            "tags_all": {
              "Environment": "sandbox",
              "Name": "yam-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}